php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #30375 The function cal_info() does not work w/o a parameter
Submitted: 2004-10-09 18:43 UTC Modified: 2004-10-11 08:58 UTC
From: ragekab at yahoo dot com Assigned:
Status: Closed Package: Calendar related
PHP Version: 5.0.2 OS: Windows XP
Private report: No CVE-ID: None
 [2004-10-09 18:43 UTC] ragekab at yahoo dot com
Description:
------------
The manual says "If no calendar is specified information on all supported calendars is returned as an array. This functionality will be available beginning with PHP 5."

I believe using cal_info() is suppose to work without a paramenter on PHP 5, however it returns an error saying its expecting a parameter.

Reproduce code:
---------------
<?

print_r(cal_info());

// Warning: cal_info() expects exactly 1 parameter

?>

Expected result:
----------------
An array of all supported calendars should return


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2004-10-11 08:58 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Wed Sep 23 23:00:02 2026 UTC