Fixed bug #30375 (cal_info() does not work without a parameter).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@170421 c90b9560-bf6c-de11-be94-00142212c4b1